feat : csi_cextraction

--- a/main_pipeline.ipynb
+++ b/main_pipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "6eaf9664",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a0bf225b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "7b7a83ad",
    "metadata": {},
    "outputs": [
@@ -63,28 +63,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded CSI data with shape: (42, 65)\n"
+      "Loaded CSI data with shape: (39, 65)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[  33.30165161, 2197.17363902, 2215.88921203, ..., 1743.41188478,\n",
-       "        1894.56089899, 2033.02729937],\n",
-       "       [  32.75667871, 2190.18378224, 2184.93066252, ..., 1723.76593539,\n",
-       "        1868.19940049, 2011.58246165],\n",
-       "       [  31.6227766 , 2229.11507105, 2226.00359389, ..., 1785.77098196,\n",
-       "        1931.64722452, 2062.28077623],\n",
+       "array([['(20-35j)', '(-246+2373j)', '(-280+2300j)', ..., '(-4+2524j)',\n",
+       "        '(-84+2498j)', '(-151+2470j)'],\n",
+       "       ['(10-43j)', '(928+2227j)', '(1048+2074j)', ..., '(362+2509j)',\n",
+       "        '(515+2470j)', '(657+2408j)'],\n",
+       "       ['(40+10j)', '(-1324+1933j)', '(-774+2123j)', ..., '(-2571+16j)',\n",
+       "        '(-2435+628j)', '(-2181+1156j)'],\n",
        "       ...,\n",
-       "       [  26.83281573, 2257.96412726, 2370.14472132, ..., 1556.78900304,\n",
-       "        1723.22053145, 1908.0212263 ],\n",
-       "       [  50.44799302, 2799.96571408, 2828.7753534 , ..., 2241.79593184,\n",
-       "        2416.59615989, 2579.64493681],\n",
-       "       [  58.72818744, 2780.69235983, 2846.29531145, ..., 2063.70661675,\n",
-       "        2283.14738902, 2477.83817066]], shape=(42, 64))"
+       "       ['(-78-27j)', '(5695-2041j)', '(5074-3222j)', ..., '(4717+2293j)',\n",
+       "        '(5304+1464j)', '(5714+450j)'],\n",
+       "       ['(44+20j)', '(-2616+1148j)', '(-2170+1798j)', ...,\n",
+       "        '(-2124-1430j)', '(-2488-913j)', '(-2731-295j)'],\n",
+       "       ['(37+37j)', '(-2338+1515j)', '(-923+2614j)', ..., '(986-2281j)',\n",
+       "        '(-562-2519j)', '(-2008-1759j)']], shape=(39, 64), dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
    "source": [
     "\n",
     "# Step 1: Load CSV\n",
-    "df = read_csi_csv(f'{path}/csi_data/walk/walk_0.csv')\n",
+    "df = read_csi_csv(f'{path}/csi_data/test/test_6.csv')\n",
     "\n",
     "# Assume subcarriers are in columns: sc1, sc2, ..., sc30\n",
     "subcarrier_columns = [col for col in df.columns if 'subcarrier' in col.lower()]\n",
@@ -111,10 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "d11d2ce7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "array type dtype('O') not supported",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Step 2: Smoothing\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m smoothed_csi \u001b[38;5;241m=\u001b[39m \u001b[43msmooth_csi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcsi_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Step 3: Normalization\u001b[39;00m\n\u001b[0;32m      6\u001b[0m normalized_csi \u001b[38;5;241m=\u001b[39m normalize_csi(smoothed_csi)\n",
+      "File \u001b[1;32mc:\\Witchaz\\Project\\Falling_Recognition\\src\\preprocessing.py:7\u001b[0m, in \u001b[0;36msmooth_csi\u001b[1;34m(data, window_size)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msmooth_csi\u001b[39m(data, window_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m      6\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Apply moving average smoothing to each column.\"\"\"\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43muniform_filter1d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Witchaz\\Project\\Falling_Recognition\\venv\\lib\\site-packages\\scipy\\ndimage\\_filters.py:1109\u001b[0m, in \u001b[0;36muniform_filter1d\u001b[1;34m(input, size, axis, output, mode, cval, origin)\u001b[0m\n\u001b[0;32m   1107\u001b[0m mode \u001b[38;5;241m=\u001b[39m _ni_support\u001b[38;5;241m.\u001b[39m_extend_mode_to_code(mode)\n\u001b[0;32m   1108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m complex_output:\n\u001b[1;32m-> 1109\u001b[0m     \u001b[43m_nd_image\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muniform_filter1d\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1110\u001b[0m \u001b[43m                               \u001b[49m\u001b[43morigin\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1111\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1112\u001b[0m     _nd_image\u001b[38;5;241m.\u001b[39muniform_filter1d(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39mreal, size, axis, output\u001b[38;5;241m.\u001b[39mreal, mode,\n\u001b[0;32m   1113\u001b[0m                                np\u001b[38;5;241m.\u001b[39mreal(cval), origin)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: array type dtype('O') not supported"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Step 2: Smoothing\n",
