--- a/pose_estimator.ipynb
+++ b/pose_estimator.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "75c8fe51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 freeze > requirements.txt "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f0c60143",
    "metadata": {},
@@ -10,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "348e0494",
    "metadata": {},
    "outputs": [],
@@ -44,21 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4763c3e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Witchaz\\\\Project\\\\Falling_Recognition'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = os.path.abspath(\".\")\n",
     "sys.path.insert(0, path) # location of src \n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "b169ca09",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "15de9484",
    "metadata": {},
    "outputs": [],
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "c2e04671",
    "metadata": {},
    "outputs": [],
@@ -185,26 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ee24f75c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['X_batch:',\n",
-       " torch.Size([32, 52, 128]),\n",
-       " 'outputs:',\n",
-       " torch.Size([32, 165]),\n",
-       " 'Y_batch:',\n",
-       " torch.Size([32, 52, 165])]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for i, df in enumerate(X_norm_df_list):\n",
     "#     print(f\"X[{i}] shape: {df.shape}\")\n",
